--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -21,8 +21,8 @@
 			<h1 th:text="${boardName}" >School Board Page</h1>
 			
 			<br />
-			<h3>Content Text:</h3>
-			<span>Content Goes Here and There</span>
+			<h3>Content:</h3>
+			<span th:text="${boardContent}">Content Goes Here</span>
 		</div>
 	</div>
 </body>
